cmake_minimum_required(VERSION 3.0)
project(Competitive-Programming)

set(CMAKE_CXX_STANDARD 14)

add_executable(program1 infixtopostfix.cpp EQUALSTRING_WA.cpp BinaryHeap.cpp binary_heap_practice.cpp SUBSTRING.cpp)
add_executable(program2 NOTALLFL.cpp)
add_executable(program3 set.cpp)
add_executable(program4 QUEUE.cpp)
add_executable(program5 STACK.cpp)
add_executable(program6 BALANCED_BRACKETS.cpp)
add_executable(program7 NEXT_GREATER.cpp)
add_executable(program8 WHICHDIV.cpp)
add_executable(program9 EQDIFFER.cpp)
add_executable(program10 maps.cpp)
add_executable(program11 MAPS_QUESTION.cpp)
add_executable(program12 TRAVELPS.cpp)
add_executable(program13 AIRLINE.cpp)
add_executable(program14 SHUFFLEIN.cpp)
add_executable(program15 unorder_map.cpp)
add_executable(program16 WEIRD_ALGORITHM.cpp)
add_executable(program17 lucky_number.cpp)
add_executable(program18 mergesort.cpp)
add_executable(program19 OperatorOverloading.cpp)
add_executable(program20 SelectionSort.cpp)
add_executable(program21 BubbleSort.cpp)
add_executable(program22 RecursiveBubbleSort.cpp)
add_executable(program23 InsertionSort.cpp)
add_executable(program24 QuickSort.cpp)
add_executable(program25 CODE.cpp)
add_executable(program26 EQUALSTRING_WA.cpp)
add_executable(program27 BinaryHeap.cpp)
add_executable(program28 binary_heap_practice.cpp)
add_executable(program29 SUBSTRING.cpp)
add_executable(program30 PREFIX.cpp)