cmake_minimum_required(VERSION 3.0)
project(Competitive-Programming)

set(CMAKE_CXX_STANDARD 17)

add_executable(program1 infixtopostfix.cpp EQUALSTRING_WA.cpp BinaryHeap.cpp binary_heap_practice.cpp SUBSTRING.cpp)
add_executable(program2 NOTALLFL.cpp)
add_executable(program3 set.cpp)
add_executable(program4 QUEUE.cpp)
add_executable(program5 STACK.cpp)
add_executable(program6 BALANCED_BRACKETS.cpp)
add_executable(program7 NEXT_GREATER.cpp)
add_executable(program8 WHICHDIV.cpp)
add_executable(program9 EQDIFFER.cpp)
add_executable(program10 maps.cpp)
add_executable(program11 MAPS_QUESTION.cpp)
add_executable(program12 TRAVELPS.cpp)
add_executable(program13 AIRLINE.cpp)
add_executable(program14 SHUFFLEIN.cpp)
add_executable(program15 unorder_map.cpp)
add_executable(program16 WEIRD_ALGORITHM.cpp)
add_executable(program17 lucky_number.cpp)
add_executable(program18 mergesort.cpp)
add_executable(program19 OperatorOverloading.cpp)
add_executable(program20 SelectionSort.cpp)
add_executable(program21 BubbleSort.cpp)
add_executable(program22 RecursiveBubbleSort.cpp)
add_executable(program23 InsertionSort.cpp)
add_executable(program24 QuickSort.cpp)
add_executable(program25 CODE.cpp)
add_executable(program26 EQUALSTRING_WA.cpp)
add_executable(program27 BinaryHeap.cpp)
add_executable(program28 binary_heap_practice.cpp)
add_executable(program29 SUBSTRING.cpp)
add_executable(program30 PREFIX.cpp)
add_executable(program31 MODULO.cpp)
add_executable(program32 HASHING.cpp)

include_directories(PROBLEM_OF_THE_DAY)
file(GLOB PROBLEM_OF_THE_DAY *.cpp)
add_executable(program33 PROBLEM_OF_THE_DAY/GDPERM.cpp)
add_executable(program34 PROBLEM_OF_THE_DAY/FINDA.cpp)
add_executable(program35 PROBLEM_OF_THE_DAY/MAXORMIN.cpp)
add_executable(program36 PROBLEM_OF_THE_DAY/EXTRACT_INT.cpp)
add_executable(program37 PROBLEM_OF_THE_DAY/SIEVE_OF_ERATOSTHENES.cpp)
add_executable(program38 PROBLEM_OF_THE_DAY/PRIME_FACTOR.cpp)
add_executable(program39 PROBLEM_OF_THE_DAY/LEARN.cpp)
add_executable(program40 PROBLEM_OF_THE_DAY/HEAP.cpp)
add_executable(program41 PROBLEM_OF_THE_DAY/PERMXOR.cpp)
add_executable(program42 PROBLEM_OF_THE_DAY/CATSRATS.cpp)
add_executable(program43 PROBLEM_OF_THE_DAY/FENWICK_TREE.cpp)
add_executable(program44 PROBLEM_OF_THE_DAY/DSA_Fortnight.cpp)
add_executable(program45 PROBLEM_OF_THE_DAY/MIN_SPANNING_TREE.cpp)
add_executable(program46 PROBLEM_OF_THE_DAY/DISJOINT.cpp)

include_directories(LeetCode)
file(GLOB LeetCode *.cpp)
add_executable(program47 LeetCode/HAPPY-NUMBER.cpp)
add_executable(program48 LeetCode/LearnC.cpp)
add_executable(program49 LeetCode/FindingDuplicates_unorderedset.cpp)
add_executable(program52 LeetCode/ValidAnagramcpp.cpp)
add_executable(program54 LeetCode/TwoSum.cpp)


file(GLOB LeetCodeBlind75C *.cpp)
include_directories(LeetCodeBlind75C)
add_executable(program50 LeetCodeBlind75C/ContainsDuplicates.c)
add_executable(program51 LeetCodeBlind75C/ValidAnagram.c)
add_executable(program53 LeetCodeBlind75C/TwoSum.c)


file(GLOB Structy *.cpp)
include_directories(Structy)
add_executable(program55 Structy/linked-list-warm-up.cpp)
add_executable(program56 Structy/linked-list-values.cpp)
add_executable(program57 Structy/reverse-list.cpp)
add_executable(program58 Structy/Q1.cpp)
add_executable(program59 Structy/Q2.cpp)
add_executable(program61 Structy/pari-sum.cpp)
add_executable(program64 Structy/tree_value_count.cpp)
add_executable(program65 Structy/all_tree_path.cpp)
add_executable(program66 Structy/level_averages.cpp)
add_executable(program67 Structy/leaf_list.cpp)
add_executable(program68 Structy/graph_warmup.cpp)
add_executable(program69 Structy/has_path.cpp)
add_executable(program70 Structy/undirected_path.cpp)
add_executable(program71 Structy/connected-components-count.cpp)
add_executable(program72 Structy/largest-component.cpp)
add_executable(program73 Structy/shortest-path.cpp)
add_executable(program74 Structy/island_count.cpp)
add_executable(program75 Structy/islant_count_recursive.cpp)
add_executable(program76 Structy/minimum_island.cpp)
add_executable(program77 Structy/min_island_count_recursive.cpp)
add_executable(program78 Structy/closest_carrot.cpp)
add_executable(program79 Structy/longest_path.cpp)
add_executable(program80 Structy/OOPs.cpp)
add_executable(program81 Structy/Inheritance.cpp)

file(GLOB STL *.cpp)
include_directories(STL)
add_executable(program60 STL/std_find.cpp)
add_executable(program63 STL/vector_print.cpp)

file(GLOB STL *.cpp)
include_directories(Sorting)
add_executable(program62 Sorting/quick_sort.cpp)

